# rewe_dl

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/: discounted_to_json-2024-08-01.json  discounted_to_json-2024-12-30.json  discounted_to_json-2025-01-07.json  discounted_to_json-2025-01-14.json  discounted_to_json-2025-01-21.json  discounted_to_json-2025-01-28.json  discounted_to_json-2025-02-04.json  discounted_to_json-2025-02-11.json  discounted_to_json-2025-02-18.json  discounted_to_json-2025-02-25.json  discounted_to_json-2025-03-04.json  discounted_to_json-2025-03-11.json  discounted_to_json-2025-03-19.json  discounted_to_json-2025-03-25.json  discounted_to_json-2025-04-02.json  discounted_to_json-2025-04-08.json  discounted_to_json-2025-04-16.json  discounted_to_json-2025-04-22.json  discounted_to_json-2025-04-29.json  discounted_to_json-2025-05-06.json  discounted_to_json-2025-05-13.json  discounted_to_json-2025-05-20.json  discounted_to_json-2025-05-27.json  discounted_to_json-2025-06-03.json  discounted_to_json-2025-06-11.json  discounted_to_json-2025-06-17.json  discounted_to_json-2025-06-25.json  discounted_to_json-2025-07-01.json  discounted_to_json-2025-07-09.json  discounted_to_json-2025-07-15.json  discounted_to_json-2025-07-22.json  discounted_to_json-2025-07-29.json  discounted_to_json-2025-08-05.json  discounted_to_json-2025-08-12.json  discounted_to_json-2025-08-19.json  discounted_to_json-2025-08-26.json  discounted_to_json-2025-09-02.json  discounted_to_json-2025-09-09.json  discounted_to_sql-2024-08-01.sqlite3  discounted_to_sql-2024-12-30.sqlite3  (+38 more)
rewe_dl/: __init__.py  __main__.py  config.json  constants.py  exception.py  formatter.py  parser.py  rewe.py  utils.py  version.py
rewe_dl/examples/: discounted_to_json.py  discounted_to_sql.py  my_basket.py  newest_products_to_sql.py  notify_when_price.py  raw_responses_to_json.py
rewe_dl/postprocessor/: common.py  metadata.py  notify.py  output.py  sql.py
scripts/: run_tests.py
test/: test_formatter.py  test_parser.py  test_postprocessor.py  test_rewe.py
